[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/shotgun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/EnemyBullets.gd" type="Script" id=4]
[ext_resource path="res://Scenes/tree_pineSmall_square1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/cliffGrey_top.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/crate.glb" type="PackedScene" id=7]
[ext_resource path="res://Assets/key.glb" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Tank.gd" type="Script" id=9]
[ext_resource path="res://Scenes/sphere_tank.tscn" type="PackedScene" id=10]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 200 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -100.546, 0.546448, -100.546, -100.546, 0.546448, 100.546, 100.546, 0.546448, -100.546, 100.546, 0.546448, 100.546 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.5

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.4, 0.1, 0.4 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.08, 0.15, 0.3 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1.6, 1.8, 1.6 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="StaticBody" parent="."]

[node name="Ground" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.013618, -0.00136352, 0.00621247 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 2 )

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 2 )

[node name="Body" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -1.62921e-007, -1, 0, 1, -1.62921e-007, 0, 1.1, 0 )
shape = SubResource( 3 )

[node name="Feet" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
shape = SubResource( 4 )

[node name="Pivot" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="Camera" type="Camera" parent="Player/Pivot"]
current = true

[node name="Shotgun" parent="Player/Pivot" instance=ExtResource( 3 )]
transform = Transform( -8, 0, -2.60673e-006, 0, 8, 0, 2.60673e-006, 0, -8, 0.2, -0.3, -0.4 )

[node name="Muzzle" type="Position3D" parent="Player/Pivot"]
transform = Transform( -1, 0, 3.25841e-007, 0, 1, 0, -3.25841e-007, 0, -1, 0.2, -0.251741, -0.706859 )

[node name="Bullets" type="Spatial" parent="."]

[node name="EnemyBullets" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="EnemyBullets"]
one_shot = true

[node name="HUD" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_right = 114.0
margin_bottom = 33.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 12.3744
margin_top = 8.13173
margin_right = 148.374
margin_bottom = 39.1317
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terrain" type="Spatial" parent="."]

[node name="tree_pineSmall_square1" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 10, 0, 10 )

[node name="Cliffs" type="Spatial" parent="."]

[node name="cliffGrey_top" parent="Cliffs" instance=ExtResource( 6 )]
transform = Transform( 30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 0, -100 )

[node name="cliffGrey_top2" parent="Cliffs" instance=ExtResource( 6 )]
transform = Transform( 30, 0, 0, 0, 30, 0, 0, 0, 30, 30, 0, -100 )

[node name="cliffGrey_top3" parent="Cliffs" instance=ExtResource( 6 )]
transform = Transform( 30, 0, 0, 0, 30, 0, 0, 0, 30, 60, 0, -100 )

[node name="cliffGrey_top4" parent="Cliffs" instance=ExtResource( 6 )]
transform = Transform( 30, 0, 0, 0, 30, 0, 0, 0, 30, 90, 0, -100 )

[node name="Items" type="Spatial" parent="."]

[node name="Crate" type="RigidBody" parent="Items"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.379099, 2.95663 )

[node name="crate" parent="Items/Crate" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5 )

[node name="CollisionShape" type="CollisionShape" parent="Items/Crate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
shape = SubResource( 5 )

[node name="Key" type="RigidBody" parent="Items"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, 5 )

[node name="key" parent="Items/Key" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5 )

[node name="CollisionShape" type="CollisionShape" parent="Items/Key"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
shape = SubResource( 6 )

[node name="Enemies" type="Spatial" parent="."]

[node name="Tank" type="KinematicBody" parent="Enemies"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 2, 0 )
script = ExtResource( 9 )

[node name="sphere_tank" parent="Enemies/Tank" instance=ExtResource( 10 )]

[node name="CollisionShape" type="CollisionShape" parent="Enemies/Tank"]
shape = SubResource( 7 )

[node name="Scanner" type="RayCast" parent="Enemies/Tank"]
enabled = true
cast_to = Vector3( 30, 0, 0 )

[node name="Timer" type="Timer" parent="Enemies/Tank"]
one_shot = true

[node name="Muzzle" type="Position3D" parent="Enemies/Tank"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.39113, 0, 0 )
[connection signal="timeout" from="EnemyBullets/Timer" to="EnemyBullets" method="_on_Timer_timeout"]
[connection signal="timeout" from="Enemies/Tank/Timer" to="Enemies/Tank" method="_on_Timer_timeout"]
